--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    --content-width: 960px;
+    box-sizing: border-box;
+    
+}
+
 html {  
     display: flex;
     justify-content: center;
@@ -11,15 +17,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 990px;
-    margin: 0 0 0 0;
+    width: var(--content-width);
+    margin: 0;
     background-color: rgb(36, 11, 1);
+    box-sizing: border-box;
 }
 
 header {
     background-color: rgba(87, 0, 87, 0.3);
     position: fixed;
     top: 0px;
+    width: var(--content-width);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,39 +44,41 @@ h1, a {
 h1 {
     color: rgb(170, 0, 0);
     font-size: 6rem;
-    margin: 0 0 1rem 0;
+    margin: 0;
 }
 
 h2 {
     font-size: 1.5rem;
 }
 
-.content-container > * {
-
-    background-repeat: no-repeat;
-    background-size: cover;
-
-}
-
 .hot {
-    background: url("./assets/hot.jpg");
-
+    background-image: url("./assets/hot.jpg");
 }
 
 .juicy {
-    background: url("./assets/juicy.jpg");
+    background-image: url("./assets/juicy.jpg");
 }
 
 .cosy {
-    background: url("./assets/cosy.jpg");
+    background-image: url("./assets/cosy.jpg");
 }
 
 .content {
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content:center;
     align-items: center;
+}
+
+.content > * {
+    margin: 0 0 2rem 0;
+}
+.content-container {
+    width: var(--content-width);
+    margin: 0px 0px 2rem 0px;
+    padding: 20vh 10vh 5vh 10vh;
+    background-repeat: no-repeat;
+    
 }
 
 
@@ -77,7 +87,7 @@ h2 {
     padding: 1.5rem;
     width: 80%;
     font-weight: 300;
-    margin-bottom: 2rem;
+    margin: 0 0 2rem 0;
 }
 
 .description-1 {
@@ -101,7 +111,7 @@ a {
 
 .info-list-item {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     align-content: center;
 }
 
@@ -110,30 +120,40 @@ li {
 }
 
 
-
 @media screen and (max-width: 800px) {
     
-    .description-2 {
-        display:none;
+    * {
+        --content-width: 100vw;
+        font-size: 10px;
     }
 
-    .content-container {
+    .description-1 {
+        align-self: center;
+    }
+
+    .description-2 {
+        display:none;
     }
 
 }
 
-@media screen and (max-width: 820px) {
+
+
+@media screen and (max-width: 550px) {
+    
+    * {
+        --content-width: 100vw;
+        font-size: 10px;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+    }
     
     .description-2 {
         display:none;
     }
-
-}
-
-@media screen and (max-width: 820px) {
-    
-    .description-2 {
-        display:none;
-    }
-
 }
