--- a/style.css
+++ b/style.css
@@ -1,24 +1,14 @@
 * {
     --content-width: 960px;
     box-sizing: border-box;
+    font-family: "Poiret One", sans-serif;;
+    color: white;
     
 }
 
-html {  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Poiret One", sans-serif;;
-    color: white;
-}
-
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
     width: var(--content-width);
-    margin: 0;
     background-color: rgb(36, 11, 1);
     box-sizing: border-box;
 }
@@ -76,14 +66,15 @@ h2 {
     align-items: center;
 }
 
-.content > * {
-    margin: 0 0 2rem 0;
-}
+
 .content-container {
     width: var(--content-width);
-    margin: 0px 0px 2rem 0px;
+    min-height: 100vh;
     padding: 20vh 10vh 5vh 10vh;
     background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 auto auto auto;
+    top: 0;
     
 }
 
@@ -91,7 +82,6 @@ h2 {
     background-color: rgba(112, 0, 0, 0.589);
     font-weight: 500;
     padding: 1rem 1rem;
-    margin: 0 0 2rem 0;
     text-align: center;
     width: 80%;
 }
@@ -109,6 +99,7 @@ h2 {
     background-color: rgba(0, 0, 0, 0.61);
     width: 20rem;
     padding: 1rem;
+    font-size: 1.2rem;
 
 }
 
@@ -127,7 +118,7 @@ li {
     
     * {
         --content-width: 100vw;
-        font-size: 10px;
+        font-size: 14px;
     }
 
     .description-1 {
@@ -143,23 +134,9 @@ li {
 
 
 @media screen and (max-width: 550px) {
-    
-    * {
-        --content-width: 100vw;
-        font-size: 10px;
-    }
 
     header a {
-        margin: 0 0rem 0 0rem;
-    }
-    .content {
-        display: flex;
-        flex-direction: column;
-        justify-content:center;
-        align-items: center;
+        margin: 0;
     }
     
-    .description-2 {
-        display:none;
-    }
 }
